add extends code  Please enter the commit message for your changes. Lines starting

--- a/note/1.md
+++ b/note/1.md
@@ -681,6 +681,8 @@ public class Student {
     }
 
     public static void main(String[] args) {
+        // 通过类加载器Class Loader加载Student类
+        // 加载后, 在方法区中就有了Student的信息
         Student s1 = new Student();
         s1.name = "华阳";
         s1.study();
@@ -697,4 +699,515 @@ public class Student {
 
 }
 ```
+### 面向对象程序执行过程的内存分析
+![](../img/memoryanalysing.png)
+> Java中的对象是通过引用reference对其进行操作的
+```java
+Student s = new Student();
+对象初始化时, 
+基本类型 int 默认是0, 
+boolean 默认是false
+char 默认 \u0000
+其他引用类型 默认值为 null
+```
+> Java中方法参数传递是: 值传递!
 
+* 栈: 存放 局部变量
+* 堆: 存放 new出来的对象
+* 方法区: 存放类的信息(代码), static变量, 常量池(字符串常量)等
+
+```java
+public class Demo16 {
+
+    public static void main(String[] args) {
+        Student s1 = new Student();
+
+        s1.setName("华阳");
+
+        s1.setAge(18);
+
+        Computer computer = new Computer();
+        computer.setBrand("联想");
+
+        computer.setCpuSpeed(100);
+
+        s1.setComputer(computer);
+
+        // computer.setBrand("戴尔");
+
+        System.out.println(s1.getComputer().getBrand());
+
+        String str1 = "联想";
+        System.out.println(str1 == s1.getComputer().getBrand()); // true
+    }
+
+}
+```
+```java
+public class Computer {
+
+    private String brand;
+
+    int cpuSpeed;
+
+    public String getBrand() {
+        return brand;
+    }
+
+    public void setBrand(String brand) {
+        this.brand = brand;
+    }
+
+    public int getCpuSpeed() {
+        return cpuSpeed;
+    }
+
+    public void setCpuSpeed(int cpuSpeed) {
+        this.cpuSpeed = cpuSpeed;
+    }
+}
+```
+```java
+public class Student {
+
+    // 静态的数据 (属性)
+    private String name;
+
+    private int id;
+
+    private int age;
+
+    private String gender;
+
+    private int weight;
+
+    private Computer computer;
+
+    // 动态的行为 (方法)
+    public void study() {
+        System.out.println(name + "在学习");
+    }
+
+    public void sayHello(String sname) {
+        System.out.println("向" + sname + "说: 你好!");
+    }
+
+    public static void main(String[] args) {
+        Student s1 = new Student();
+        s1.name = "华阳";
+        s1.study();
+        s1.sayHello("梦梦");
+
+        System.out.println("----------------");
+
+        Student s2 = new Student();
+        s2.age = 18;
+        s2.name = "小张";
+        s2.study();
+        s2.sayHello("华阳");
+    }
+
+    public String getName() {
+        return name;
+    }
+
+    public void setName(String name) {
+        this.name = name;
+    }
+
+    public int getId() {
+        return id;
+    }
+
+    public void setId(int id) {
+        this.id = id;
+    }
+
+    public int getAge() {
+        return age;
+    }
+
+    public void setAge(int age) {
+        this.age = age;
+    }
+
+    public String getGender() {
+        return gender;
+    }
+
+    public void setGender(String gender) {
+        this.gender = gender;
+    }
+
+    public int getWeight() {
+        return weight;
+    }
+
+    public void setWeight(int weight) {
+        this.weight = weight;
+    }
+
+    public Computer getComputer() {
+        return computer;
+    }
+
+    public void setComputer(Computer computer) {
+        this.computer = computer;
+    }
+}
+```
+![](../img/memoryanalysing2.png)
+
+### 虚拟机内存管理和垃圾回收机制（C++和Java的比较）
+> 对象空间的分配
+使用new关键字创建对象即可
+> 对象空间的释放
+将对象赋值null即可，垃圾回收器将负责回收所有“不可达”
+对象的内存空间。
+> 要点:
+* 程序员无权调用垃圾回收器
+* 程序员可以通过System.gc(). 通知GC运行, 但是JAVA规范
+并不能保证立刻运行。
+* finalize方法，是JAVA提供给程序员来释放对象或资源的方法，
+但是尽量少用。
+
+### 构造方法
+```java
+/**
+ * 构造方法 (用于构造该类的实例, 经常也用来初始化对象的属性)
+ */
+public class Demo17 {
+
+    public static void main(String[] args) {
+
+        // 通过new 关键字调用
+        Car car = new Car();
+
+
+    }
+}
+```
+```java
+/**
+ * 构造方法 (用于构造该类的实例)
+ */
+public class Car {
+
+
+    private int speed;
+
+    // 默认自动添加无参数的构造方法
+    public Car() {
+        System.out.println("构造一辆小汽车");
+    }
+
+}
+```
+```java
+/**
+ * 三维空间的点
+ */
+public class Point {
+    /**
+     * 定义一个点(Point)类用来表示三维空间中的点(有三个坐标)
+     * 1. 可以生成具有特定坐标的点对象
+     * 2. 提供可以设置三个坐标的方法
+     * 3. 提供可以计算一个点距另外一个点距离的方法
+     */
+
+    double x, y, z;
+
+    // 通过构造方法初始化对象的属性
+    public Point(double x, double y, double z) {
+        this.x = x; // this关键字表示自己
+        this.y = y;
+        this.z = z;
+    }
+
+    public void setX(double x) {
+        this.x = x;
+    }
+
+    public void setY(double y) {
+        this.y = y;
+    }
+
+    public void setZ(double z) {
+        this.z = z;
+    }
+
+    public double distance(Point p) {
+        return Math.sqrt((this.x - p.x) * (this.x - p.x) + (this.y - p.y) * (this.y - p.y) + (this.z - p.z) * (this.z - p.z));
+    }
+
+    public static void main(String[] args) {
+
+        Point point = new Point(3, 4, 8);
+        System.out.println(point.x);
+
+        Point point1 = new Point(6, 8, 16);
+
+        double result = point.distance(point1);
+
+        System.out.println(result);
+    }
+
+}
+```
+### 方法重载和构造方法重载 (Overload)
+> 方法的重载是指一个类中可以定义有相同名字,但参数不同的多个方法. 调用时,会根据不同的参数选择对应的方法
+```java
+public class Demo18 {
+
+    public static void main(String[] args) {
+        MyMath m = new MyMath();
+
+        int result = m.add(4, 5);
+
+        System.out.println(result);
+
+        int result2 = m.add(6, 7, 8);
+
+        System.out.println(result2);
+
+        int result3 = m.add(3.2, 3);
+        System.out.println(result3);
+    }
+
+}
+
+class MyMath {
+
+    int a;
+
+    public MyMath() {
+
+    }
+
+    // 构造方法也可以重载
+    public MyMath(int a) {
+        this.a = a;
+    }
+
+    // add方法的重载
+    public int add(int x, int y) {
+        return x + y;
+    }
+
+    // 1.参数个数不同
+    public int add(int x, int y, int z) {
+        return x + y + z;
+    }
+
+    // 2.参数类型不同
+    public int add(double x, int y) {
+        return (int) (x + y);
+    }
+
+    // 3.参数顺序不同
+    public int add(int x, double y) {
+        return (int) (x + y);
+    }
+
+}
+```
+
+### static变量和方法及内存分析
+```java
+/**
+ * static变量和方法及内存分析
+ */
+public class Demo19 {
+
+    public static void main(String[] args) {
+        // 静态变量可以直接赋值, 不需要new
+        User.nickName = "小张";
+        // 静态方法可以使用静态变量, 但不可以使用非静态变量和方法
+        // 非静态变量和方法需要new 对象
+        User.printNiceName();
+    }
+}
+```
+```java
+public class User {
+
+    private String name;
+
+    private int age;
+
+    // 静态成员变量: 类变量
+    public static String nickName;
+
+    // 静态方法: 类方法
+    public static void printNiceName() {
+        System.out.println(nickName);
+    }
+
+    public void study() {
+        System.out.println("study");
+    }
+
+    public void sayHello(String sname) {
+        System.out.println("向" + sname + "say hello");
+    }
+}
+```
+![](../img/staticMemory.png)
+
+### this隐式参数和内存分析
+```java
+/**
+ * this隐式参数(还有个super)和内存分析
+ */
+public class Teacher {
+
+    // this
+    // 1. 普通方法中, this总是指向调用该方法的对象
+    // 2. 构造方法中, this总是指向正要初始化的对象
+    // 3. this不能用于static方法
+
+    private String name;
+
+    private int age;
+
+    public Teacher(String name, int age) {
+        // 4. 通过this调用其他构造方法, 必须位于第一句
+        this(); // 调用当前类的无参构造器
+        // this(name);
+        this.name = name;
+        this.age = age;
+    }
+
+    public Teacher(String name) {
+        this.name = name;
+    }
+
+    public Teacher() {
+
+    }
+
+    public void study() {
+        this.name = "小张";
+        System.out.println("study");
+    }
+
+    public void sayHello(String sname) {
+        System.out.println("向" + sname + "sayHello");
+    }
+
+}
+```
+
+### 继承的基本概念 (OOA、OOD、OOP) [java中的类只有单继承, 接口可以多继承]
+* 类是对对象的抽象，继承是对某一批类的抽象，从而实现对现实世界更好的建模
+* 提高代码的复用性
+* extends的意思是“扩展”, 子类是父类的扩展
+![](../img/extends.png)
+```java
+public class Animal {
+
+    private String eye;
+
+    public void run() {
+        System.out.println("跑起来...");
+    }
+
+    public void eat() {
+        System.out.println("吃起来...");
+    }
+
+    public void sleep() {
+        System.out.println("zzz...");
+    }
+
+}
+
+// 哺乳动物
+class Mammal extends Animal {
+
+    public void taisheng() {
+        System.out.println("我是胎生");
+    }
+}
+
+// 爬行动物
+class Reptile extends Animal {
+
+    public void luansheng() {
+        System.out.println("我是卵生");
+    }
+}
+```
+
+### 继承的方法的重写 (Override)
+```java
+public class Animal {
+
+    private String eye;
+
+    public void run() {
+        System.out.println("跑起来...");
+    }
+
+    public void eat() {
+        System.out.println("吃起来...");
+    }
+
+    public void sleep() {
+        System.out.println("zzz...");
+    }
+
+    // test
+    public static void main(String[] args) {
+        Bird bird = new Bird();
+        bird.run(); // 我是一只鸟, 我飞丫飞起来...
+    }
+
+}
+
+class Bird extends Animal {
+    // 重写父类的run方法, 实现自身的功能
+    public void run() {
+        super.run(); // 调用父类的run() 方法
+        System.out.println("我是一只鸟, 我飞丫飞起来...");
+    }
+}
+```
+
+### Object类用法以及toString和equals方法
+```java
+/**
+ * Object类用法以及toString和equals方法
+ */
+public class Demo20 {
+
+    public static void main(String[] args) {
+
+        Object obj = new Object();
+        Object obj2 = new Object();
+
+        System.out.println(obj.toString());
+        System.out.println(obj2.toString());
+
+        System.out.println(obj == obj2); // false 内存地址不同
+
+        // 内部调用了:  return (this == obj);
+        System.out.println(obj.equals(obj2)); // false
+
+
+        Mobile m = new Mobile();
+        System.out.println(m.toString());
+    }
+}
+```
+```java
+public class Mobile {
+
+    // 重写Object的toString()方法
+    public String toString() {
+        return "我是一部移动电话";
+    }
+}
+```
+
+### super构造器的调用和继承的内存分析（非常重要）
