--- a/note/1.md
+++ b/note/1.md
@@ -1211,3 +1211,1271 @@ public class Mobile {
 ```
 
 ### super构造器的调用和继承的内存分析（非常重要）
+> super是直接父类对象的引用。可以通过super
+来访问父类中被子类覆盖的方法或属性
+
+![](../img/super.png)
+
+### 组合
+* "is-a" 关系使用继承 (是)
+* "has-a" 关系使用组合 (拥有)
+```java
+/**
+ * has-a 组合关系 (继承关系更灵活)
+ */
+public class Animal2 {
+
+    private String eye;
+
+    public void run() {
+        System.out.println("跑起来...");
+    }
+
+    public void eat() {
+        System.out.println("吃起来...");
+    }
+
+    public void sleep() {
+        System.out.println("zzz...");
+    }
+
+    public Animal2() {
+        super();
+        System.out.println("创建一只动物");
+    }
+
+    public static void main(String[] args) {
+        Bird2 bird = new Bird2();
+        bird.run(); // 我是一只鸟, 我飞丫飞起来...
+        bird.animal2.eat();
+    }
+}
+
+// 哺乳动物
+class Mammal2 {
+
+    Animal2 animal2 = new Animal2();
+
+    public void taisheng() {
+        System.out.println("我是胎生");
+    }
+}
+
+class Bird2 {
+
+    Animal2 animal2 = new Animal2();
+
+    public void run() {
+        animal2.run();
+        System.out.println("我是一只鸟, 我飞丫飞起来...");
+    }
+
+}
+```
+
+### final关键字
+* 修饰变量: 常量
+* 修饰方法: 该方法不可被子类重写, 但是可以被重载
+* 修饰类: 修饰的类不能有子类，不能被继承. 比如: Math、String
+```java
+public class Demo21 {
+
+    public static void main(String[] args) {
+
+        final int MAX_VALUE = 200; // final修饰的变量表示,常量一旦初始化,不能被修改
+
+        double pi = Math.PI; // Math类就是final修饰的类
+    }
+}
+
+/*final*/ class Animal3 { // final修饰类则说明,这个类不能被继承
+
+    public /*final*/ void run() { // final修饰方法,表示着该方法不能被子类重写!
+        System.out.println("跑起来...");
+    }
+
+}
+
+
+class Bird3 extends Animal3 {
+    public void run() {
+        super.run();
+        System.out.println("我是一只鸟, 我飞丫飞起来...");
+    }
+}
+```
+
+### 隐藏/封装(encapsulation)
+* 访问修饰符
+
+||同一个类|同一个包中|子类|所有类|
+|:--:|:--:|:--:|:--:|:--:|
+|private|☑️||||
+|default|☑️|☑️|||
+|protected|☑️|☑️|☑️||
+|public|☑️|☑️|☑️|☑️|
+
+```java
+/**
+ * private 修饰符
+ */
+public class Demo22 {
+
+    private String str;
+
+    private void print() {
+        String s = str;
+        System.out.println("Demo22.print");
+    }
+
+    void print2() {
+        System.out.println("default.print");
+    }
+
+    protected void print3() {
+        System.out.println("protected.print");
+    }
+
+    public void print4() {
+        System.out.println("public.print");
+    }
+}
+```
+```java
+/**
+ * private default protected public 访问修饰符
+ */
+public class Demo23 {
+
+    public static void main(String[] args) {
+
+        Demo22 demo = new Demo22();
+        // demo.print(); // private
+
+        demo.print2(); // default
+
+        demo.print3(); // protected
+
+        demo.print4(); // public
+    }
+}
+```
+```java
+ * 对男人类的封装
+ */
+public class Man {
+
+    private String name;
+    private String id;
+    public static int phone;
+    public static final int MAX_SPEED = 120;
+    private boolean gender;
+
+    // boolean类型的 是is
+    public boolean isGender() {
+        return gender;
+    }
+
+    public void setGender(boolean gender) {
+        this.gender = gender;
+    }
+
+    public String getName() {
+        return name;
+    }
+
+    public void setName(String name) {
+        this.name = name;
+    }
+
+    public String getId() {
+        return id;
+    }
+
+    public void setId(String id) {
+        this.id = id;
+    }
+
+    public static int getPhone() {
+        return phone;
+    }
+
+    public static void setPhone(int phone) {
+        Man.phone = phone;
+    }
+
+    public static int getMaxSpeed() {
+        return MAX_SPEED;
+    }
+}
+```
+### 多态(polymorphism)基本概念和instanceof运算符
+* 编译期 － 运行期(说 - 做) [Animal - Cat]
+* 多态的必要条件
+    1. 要有继承
+    2. 要有方法的重写
+    3. 父类引用指向子类对象
+
+```java
+package com.oop;
+
+/**
+ * 多态基本概念和instanceof运算符
+ */
+public class Demo24 {
+
+    public static void testAnimalVoice(Animal obj) {
+        obj.voice();
+        if (obj instanceof Cat) { // 如果obj是Cat的实例对象
+            ((Cat) obj).catchMouse(); // 调用Cat的抓老鼠方法
+        }
+    }
+
+    /*
+    public static void testAnimalVoice(Dog d) {
+        d.voice();
+    }
+
+    public static void testAnimalVoice(Cat c) {
+        c.voice();
+    }
+
+    public static void testAnimalVoice(Pig p) {
+        p.voice();
+    }
+    */
+
+    public static void main(String[] args) {
+        //Cat c = new Cat();
+        //testAnimalVoice(c);
+        // 父类引用指向子类对象
+        Animal a = new Cat();
+        Animal b = new Dog();
+        Animal c = new Pig();
+        // 多态的必要条件
+        // 1. 要有继承
+        // 2. 要有方法的重写
+        // 3. 父类引用指向子类对象
+        testAnimalVoice(a); // 喵喵喵...
+        testAnimalVoice(b); // 汪汪汪...
+        testAnimalVoice(c); // 哼哼哼...
+
+        // 强制转型, 调用猫的抓老鼠方法
+        Cat a2 = (Cat) a;
+        a2.catchMouse();
+    }
+}
+```
+```java
+public class Animal {
+
+    String str;
+
+    public void voice() {
+        System.out.println("普通动物叫声");
+    }
+
+}
+
+class Cat extends Animal {
+
+    public void voice() {
+        System.out.println("喵喵喵...");
+    }
+
+    public void catchMouse() {
+        System.out.println("抓老鼠...");
+    }
+}
+
+class Dog extends Animal {
+
+    public void voice() {
+        System.out.println("汪汪汪...");
+    }
+
+    public void lookDoor() {
+        System.out.println("看门...");
+    }
+}
+
+class Pig extends Animal {
+
+    public void voice() {
+        System.out.println("哼哼哼...");
+    }
+}
+```
+### 多态内存分析
+![](../img/duotai.png)
+
+### 多态内存分析深化（模拟Servlet中方法的调用）
+```java
+/**
+ * 多态内存分析深化（模拟Servlet中方法的调用）
+ */
+public class HttpServlet {
+
+    public void service() {
+        System.out.println("Service");
+        doGet();
+    }
+
+    public void doGet() {
+        System.out.println("doGet");
+    }
+
+    public void doPost() {
+        System.out.println("doPost");
+    }
+}
+```
+```java
+public class MyServlet extends HttpServlet {
+
+    @Override
+    public void doGet() {
+        System.out.println("MyServlet doGet");
+    }
+}
+```
+```java
+public class Demo25 {
+
+    public static void main(String[] args) {
+        HttpServlet s = new MyServlet(); // 父类引用指向子类对象
+        s.service(); // Service  MyServlet doGet
+    }
+
+}
+```
+
+### 抽象类和抽象方法[意义: 将方法的设计 与 方法的实现相分离]
+> 什么是抽象类:
+* 是一种模版模式，抽象类为所有子类提供了一个通用的模版,子类可以在这个模版基础上进行扩充。
+* 通过抽象类, 可以避免子类设计的随意性, 通过抽象类, 我们就可以做到严格限制子类的设计, 使子类之间更加通用。
+```java
+/**
+ * Created by Echo on 11/29/17.
+ * 抽象类和抽象方法
+ */
+public abstract class Animal2 {
+
+    public String str;
+
+    // 抽象类定义方法, 子类去具体实现
+    public abstract void run();
+
+    public void breath() {
+        System.out.println("呼吸");
+    }
+}
+
+class Cat2 extends Animal2 {
+
+    @Override
+    public void run() { // 抽象类中的抽象方法子类必须重写
+        System.out.println("猫咪跑起来...");
+    }
+}
+
+class Dog2 extends Animal2 {
+
+    @Override
+    public void run() { // 实现了方法的设计与方法实现相分离
+        System.out.println("狗狗跑起来...");
+    }
+}
+```
+
+### 接口详解(interface)
+```java
+/**
+ * 接口详解(interface) 接口中只有: 常量, 抽象方法
+ * 设计(规范)与实现相分离
+ */
+public interface Demo26 {
+
+    public static final String MAX_GREAD = "BOSS";
+
+    // 1. 接口常量定义时, 都是 public static final
+    int MAX_SPEED = 120;
+
+    public abstract void test01();
+
+    // 2. 接口方法定义时, 都是 public abstract 的
+    int test02(int a, int b);
+}
+```
+```java
+/**
+ * Demo26接口的实现
+ */
+public class Demo27 implements Demo26 {
+
+    @Override
+    public void test01() {
+        int maxSpeed = Demo26.MAX_SPEED;
+        System.out.println("test01" + maxSpeed);
+    }
+
+    @Override
+    public int test02(int a, int b) {
+        System.out.println("a + b");
+        return a + b;
+    }
+}
+```
+```java
+public interface Flyable {
+    int MAX_SPEED = 11000;
+
+    int MIN_HEIGHT = 1;
+
+    void fly();
+}
+
+interface Attack {
+    void attack();
+}
+
+class Plane implements Flyable {
+
+    @Override
+    public void fly() {
+        System.out.println("飞机依靠发动机飞行...");
+    }
+}
+
+class Person implements Flyable {
+
+    @Override
+    public void fly() {
+        System.out.println("跳起来, 飞...");
+    }
+}
+
+// 一个类可以实现多个接口(一个人需要遵守多个规范)
+class Stone implements Flyable, Attack {
+
+    int weight;
+
+    @Override
+    public void fly() {
+        System.out.println("被扔出去, 飞...");
+    }
+
+    @Override
+    public void attack() {
+        System.out.println("用石头攻击...");
+    }
+}
+```
+```java
+/**
+ * 接口支持多继承
+ */
+public interface InterfaceA {
+    void aaa();
+}
+
+interface InterfaceB {
+    void bbb();
+}
+
+// 接口的多继承
+interface InterfaceC extends InterfaceA, InterfaceB {
+    void ccc();
+}
+
+class testClass implements InterfaceC {
+
+    @Override
+    public void ccc() {
+        System.out.println("ccc");
+    }
+
+    @Override
+    public void aaa() {
+        System.out.println("aaa");
+    }
+
+    @Override
+    public void bbb() {
+        System.out.println("bbb");
+    }
+}
+```
+### 回调的实现以及模板方法模式
+```java
+/**
+ * Created by Echo on 11/29/17.
+ */
+public class MyFrame {
+
+    public void paint() {
+        System.out.println("把自己的窗口画出来");
+    }
+}
+
+interface IMyFrame {
+    void paint();
+}
+```
+```java
+/**
+ * 回调的实现以及模板方法模式
+ */
+public class PaintFrame {
+
+    public static void drawFrame(MyFrame f) {
+
+        System.out.println("启动线程");
+        System.out.println("增加循环");
+        System.out.println("查看消息栈");
+
+        // 画窗口
+        f.paint(); // GameFrame.paint()
+
+        System.out.println("启动缓存, 增加效率");
+    }
+
+    public static void main(String[] args) {
+        drawFrame(new GameFrame01()); // GameFrame01.paint()
+        drawFrame(new GameFrame02()); // GameFrame02.paint()
+    }
+}
+
+class GameFrame01 extends MyFrame {
+
+    @Override
+    public void paint() {
+        System.out.println("GameFrame01.paint()");
+    }
+}
+
+class GameFrame02 extends MyFrame {
+
+    @Override
+    public void paint() {
+        System.out.println("GameFrame02.paint()");
+    }
+}
+```
+
+### 内部类详解 (定义在类内部的类)
+```java
+/**
+ * 内部类详解
+ */
+public class Outer {
+
+    public static void main(String[] args) {
+
+        Face f = new Face();
+        // 字节码文件Face$Nose.class
+        Face.Nose n = f.new Nose();
+        n.breath();
+
+        // 静态内部类
+        Face.Ear e = new Face.Ear();
+        e.listen();
+    }
+}
+
+class Face {
+
+    int type = 6;
+    static String color = "脸色红润";
+
+    // 1. 外部类不可以访问内部类的属性和方法
+
+    // 内部类
+    class Nose {
+        String type = "鹰钩鼻";
+
+        void breath() {
+            // 2. 内部类可以访问外部类的属性和方法
+            System.out.println(Face.this.type); // 6
+            System.out.println("呼吸...");
+        }
+
+    }
+
+    // 静态内部类
+    static class Ear {
+        void listen() {
+            // 3. 静态内部类可以访问静态属性
+            System.out.println(color);
+            System.out.println("我在听...");
+        }
+    }
+
+}
+```
+
+### 数组基本概念和内存分析
+* 相同数据类型(数据类型可以任意)的有序集合
+* 数组也是对象，数组元素相当于对象的成员变量
+* 数组的长度是固定的，不可变的。如果越界限,则报ArrayIndexOutOfBoundsException
+```java
+public class Car {
+    private String name;
+
+    public Car(String name) {
+        this.name = name;
+    }
+
+    public String getName() {
+        return name;
+    }
+
+    public void setName(String name) {
+        this.name = name;
+    }
+}
+```
+```java
+/**
+ * 数组基本概念和内存分析
+ */
+public class Demo28 {
+
+    public static void main(String[] args) {
+        // 定义一个长度为3的数组
+        int[] a = new int[3];
+        a[0] = 23;
+        a[1] = 20;
+        a[2] = 35;
+        // 数组索引越界
+        // a[3] = 66; // Exception in thread "main" java.lang.ArrayIndexOutOfBoundsException: 3
+
+        double[] b = new double[5];
+
+        // 数组可以存储任意数据类型
+        Car[] cars = new Car[4];
+
+        cars[0] = new Car("奔驰");
+        cars[1] = new Car("宝马");
+        cars[2] = new Car("吉利");
+
+        System.out.println(cars[0].getName());
+
+        // 数组的长度
+        System.out.println(a.length); // length属性
+
+        for (int i = 0; i < a.length; i++) {
+            System.out.print(a[i] + "\t");
+        }
+
+    }
+
+}
+```
+![](../img/array.png)
+
+### 数组的三种初始化方式
+```java
+/**
+ * 数组的三种初始化方式
+ */
+public class Demo29 {
+
+    public static void main(String[] args) {
+        // 声明
+        int[] a;
+        int b[];
+
+        // 创建数组
+        a = new int[4];
+        b = new int[5];
+
+        // 初始化(对数组元素的初始化)
+        // 数组的元素相当于对象的成员变量
+        // 1. 默认初始化 默认值跟成员变量的规则一样, 数字0, 布尔false, chart\u0000, 引用类型null
+
+        // 2. 动态初始化
+        for (int i = 0; i < a.length; i++) {
+            a[i] = i * 11;
+        }
+
+        // 3. 静态初始化
+        int c[] = {11, 32, 44, 23}; // 索引范围:0 ~ 3, 数组长度为4
+
+        Car[] cars = {new Car("奔驰"), new Car("宝马"), new Car("奥迪")};
+
+        Car c2 = new Car("奔驰");
+
+        System.out.println(c2 == cars[0]); // false
+
+    }
+}
+```
+### String类的常用方法（JDK源码分析）
+```java
+/**
+ * String（不可变字符序列）
+ */
+public class Demo30 {
+
+    public static void main(String[] args) {
+
+        String str = new String("abcd");  // 0x0001ff01
+        String str2 = new String("abcd"); // 0x0010ff10
+
+        System.out.println(str.charAt(2)); // c
+        // 1. new新字符串使用 == 进行比较, false [内存地址不同]
+        System.out.println(str2.equals(str)); // true //true  比较内容是否相等
+        System.out.println(str2 == str); // false
+
+        // 2. 使用 == 比较常量池中的字符串, true
+        String str3 = "def";
+        String str4 = "def";
+        System.out.println(str3.equals(str4)); // true
+        System.out.println(str3 == str4); // true
+
+        // 3. String 常用方法
+        // indexOf 查询字符的索引位置
+        System.out.println(str3.indexOf('e')); // 1
+        System.out.println(str3.indexOf('y')); // -1
+
+        // substring, 按索引地址截取字符串
+        String result = str4.substring(2);
+        System.out.println(result); // f
+
+        // replace, 替换指定字符
+        String result2 = str4.replace("e", "*");
+        System.out.println(result2); // d*f
+
+        String str6 = "aabbc,ddtfe,dfas";
+
+        // 按指定字符,分隔字符串为字符串数组
+        // split
+        String[] strArr = str6.split(",");
+        for (int i = 0; i < strArr.length; i++) {
+            System.out.print(strArr[i] + "\t");
+        }
+        System.out.println();
+
+        // trim 去除指定字符串的首位空格
+        String str7 = " aa cc dd ";
+        String trimStr = str7.trim();
+        System.out.println(trimStr.length()); // 8
+
+        // equalsIgnoreCase
+        System.out.println("ABC".equalsIgnoreCase("abc")); // true
+
+        System.out.println("Abcbd".indexOf('b'));
+        System.out.println("Abcbd".lastIndexOf('b'));
+        System.out.println("Abcbd".startsWith("Ab"));
+        System.out.println("Abcbd".endsWith("bd"));
+        System.out.println("Abcbd".toLowerCase());
+        System.out.println("Abcbd".toUpperCase());
+
+        System.out.println("==================");
+
+        // string 是final的
+        // private final char value[];
+        String gh = "a";
+        // String gh = new String("a"); 生成两个对象: new String(), "a"
+        for (int i = 0; i < 10; i++) {
+            // gh += i;
+            gh = gh + i; // 开发中应避免这样的代码, 会占更多的内存空间, 11个对象
+        }
+        System.out.println(gh);
+    }
+}
+```
+![](../img/string.png)
+
+### StringBuilder和StringBuffer的使用（方法链的实现和JDK源码分析）
+```java
+/**
+ * StringBuilder和StringBuffer的使用（方法链的实现和JDK源码分析）
+ * 可变字符序列
+ * StringBuilder (线程不安全, 效率高) 开发常用 局部变量
+ * StringBuffer (线程安全, 效率低)
+ */
+public class Demo31 {
+
+    public static void main(String[] args) {
+
+        // 1. 查看源码发现: public StringBuilder() {super(16);} 初始化为16
+        StringBuilder sb = new StringBuilder();
+        StringBuilder sb1 = new StringBuilder(32);
+        StringBuilder sb2 = new StringBuilder("abcd"); // value[] = {'a', 'b', 'c', 'd'.....}
+
+        sb2.append("efg"); // value[] = {'a', 'b', 'c', 'd', 'e', 'f', 'g'}
+        sb2.append(true);
+        System.out.println(sb2); // abcdefgtrue
+
+        // 2. 通过 return this, 可以使用方法链(链式调用)
+        sb2.append("66").append("haha");
+
+        System.out.println("===============");
+        // 3. value[] 数组的自动扩容 value.length * 2 + 2;
+        StringBuilder gh = new StringBuilder("builder"); // 内存中新建了两个对象 "builder", new StringBuilder();
+        for (int i = 0; i < 10; i++) {
+            gh.append(i);
+        }
+        System.out.println(gh); // builder0123456789
+
+        // 4. delete
+        StringBuilder sb7 = new StringBuilder("abcdefghijklmnopqrstuvwxyz");
+        sb7.delete(3, 5);
+        System.out.println(sb7); // abcfghijklmnopqrstuvwxyz [左包右不包]
+
+        // 5. reverse
+        System.out.println(sb7.reverse()); // zyxwvutsrqponmlkjihgfcba
+
+        // synchronized 同步方法,线程安全的, 效率低
+        StringBuffer sbuff = new StringBuffer();
+
+    }
+}
+```
+
+### 模拟ArrayList容器的底层实现（JDK源码分析ArrayList）
+```java
+/**
+ * 模拟ArrayList容器的底层实现（JDK源码分析ArrayList）
+ */
+public class MyArrayList {
+
+    private Object[] value;
+
+    private int size;
+
+    public MyArrayList() {
+        // value = new Object[16];
+        this(10);
+    }
+
+    public MyArrayList(int size) {
+        if (size < 0) {
+            try {
+                throw new Exception(); // 手动抛出异常
+            } catch (Exception e) {
+                e.printStackTrace();
+            }
+        }
+        value = new Object[size];
+    }
+
+    public int size() {
+        return size;
+    }
+
+    public void add(Object obj) {
+        value[size] = obj;
+        size++;
+        if (size >= value.length) {
+            // 装不下 自动扩容
+            int newCapacity = value.length * 2;
+            Object[] newList = new Object[newCapacity];
+            // System.arraycopy();
+            for (int i = 0; i < value.length; i++) {
+                newList[i] = value[i];
+            }
+            value = newList;
+        }
+    }
+
+    public Object get(int index) {
+        if (index < 0 || index > size - 1) {  // 索引范围: [0, size - 1]
+            try {
+                throw new Exception(); // 手动抛出异常
+            } catch (Exception e) {
+                e.printStackTrace();
+            }
+        }
+        return value[index];
+    }
+
+    public int indexOf(Object obj) {
+        if (obj == null) {
+            return -1;
+        } else {
+            for (int i = 0; i < value.length; i++) {
+                if (obj == value[i]) {
+                    return i;
+                }
+            }
+            return -1;
+        }
+    }
+
+    public int lastIndexOf(Object obj) {
+        if (obj == null) {
+            return -1;
+        } else {
+            for (int i = value.length - 1; i > 0; i--) {
+                if (obj == value[i]) {
+                    return i;
+                }
+            }
+            return -1;
+        }
+    }
+
+    public static void main(String[] args) {
+        // 参考JDK ArrayList
+        ArrayList arrayList = null;
+
+        MyArrayList list = new MyArrayList(2);
+        list.add("aaa");
+        list.add(new Person("华阳"));
+        list.add("bbb");
+        list.add("ccc");
+        list.add("ddd");
+
+        Person p = (Person) list.get(1); // 获取索引为1的元素
+        System.out.println(p.getName());
+
+        System.out.println(list.size());
+    }
+
+}
+```
+
+### 多维数组基本语法和内存分析
+```java
+/**
+ * 多维数组基本语法和内存分析
+ */
+public class Demo32 {
+
+    public static void main(String[] args) {
+
+        // 1. 静态初始化
+        int[][] a = {
+                        {1, 2},
+                        {3, 4, 0, 9},
+                        {5, 6, 7}
+                    };
+
+
+        // 2. 动态初始化
+        int[][] b = new int[3][];
+        b[0] = new int[2];
+        b[1] = new int[4];
+        b[2] = new int[3];
+
+        b[0][0] = 1;
+        b[0][1] = 2;
+
+        b[1][0] = 3;
+        b[1][1] = 4;
+        b[1][2] = 0;
+        b[1][3] = 9;
+
+        b[2][0] = 5;
+        b[2][1] = 6;
+        b[2][2] = 7;
+
+        System.out.println(b[2][2]);
+
+    }
+
+}
+```
+![](../img/array2.png)
+
+### 多维数组练习矩阵运算
+```java
+/**
+ * 多维数组练习矩阵运算
+ * 1 3     3 4     4  7
+ *      +       =
+ * 2 4     5 6     7 10
+ */
+public class Matrix {
+
+    /**
+     * 打印指定矩阵
+     *
+     * @param c
+     */
+    public static void print(int[][] c) {
+        for (int i = 0; i < c.length; i++) {
+            for (int j = 0; j < c.length; j++) {
+                System.out.print(c[i][j] + "\t");
+            }
+            System.out.println();
+        }
+    }
+
+    /**
+     * 矩阵加法运算
+     * @param a
+     * @param b
+     * @return
+     */
+    public static int[][] add(int[][] a, int[][] b) {
+        int[][] c = new int[a.length][a.length];
+        for (int i = 0; i < c.length; i++) {
+            for (int j = 0; j < c.length; j++) {
+                c[i][j] = a[i][j] + b[i][j];
+            }
+        }
+        return c;
+    }
+
+    public static void main(String[] args) {
+        int[][] a = {
+                        {1, 3},
+                        {2, 4},
+                    };
+
+        int[][] b = {
+                        {3, 4},
+                        {5, 6}
+                    };
+
+        int[][] result = add(a, b);
+        print(result);
+
+    }
+}
+```
+
+### 数组的拷贝、排序、二分法、命令行参数以及增强for循环
+```java
+/**
+ * 数组的拷贝、排序、二分法、命令行参数以及增强for循环
+ */
+public class Demo33 {
+
+    public static void main(String[] args) {
+
+        // 1. 基本算法
+        //  冒泡排序
+
+        // 二分法查找, 1. 先排序, 2. 从中间开始查找,去除一半元素
+
+
+        // 2. 增强for循环
+        int[] array = {1, 3, 5, 6, 7, 23, 45, 74};
+        for (int i = 0; i < array.length; i++) {
+            int m = array[i];
+            System.out.print(m + "\t");
+        }
+
+        System.out.println();
+
+        for (int m : array) {
+            System.out.print(m + "\t");
+        }
+
+        System.out.println();
+
+        // 3. arrays的用法
+        int[] array2 = {14, 3, 352, 46, 17, 123, 405, 74};
+        // 首先进行数组元素排序
+        // 3.1 Arrays.sort();
+        Arrays.sort(array2);
+        System.out.println(Arrays.toString(array2));
+
+        // 二分查找
+        // 3.2 Arrays.binarySearch();
+        System.out.println("该元素的索引: " + Arrays.binarySearch(array2, 46)); // 3
+        System.out.println("该元素的索引: " + Arrays.binarySearch(array2, 7)); // 找不到返回附属
+
+        // 3.3 Arrays.asList(); 数组转换为List
+
+        // 3.4 Arrays.fill(); 数组填充
+
+    }
+}
+```
+### 包装类Integer和Number（JDK源码分析）
+|基本数据类型|包装类|
+|:--:|:--:|
+|byte|Byte|
+|boolean|Boolean|
+|short|Short|
+|char|Character|
+|int|Integer|
+|long|Long|
+|float|Float|
+|double|Double|
+
+```java
+/**
+ * 包装类Integer和Number（JDK源码分析）
+ */
+public class Demo34 {
+
+    public static void main(String[] args) {
+
+        Integer i = new Integer(1000);
+
+        // 1. int的最大值
+        System.out.println(Integer.MAX_VALUE);
+
+        // 2. 转为16进制
+        System.out.println(Integer.toHexString(i));
+
+        // 3. 字符串转为整数
+        Integer i2 = Integer.parseInt("234");
+
+        // 4. 对象转换为整型
+        System.out.println(i2.intValue());
+        Integer i3 = new Integer("333");
+        System.out.println(i2 + 10);
+
+    }
+}
+```
+
+### 自动装箱和拆箱(auto_boxing & unboxing)
+```java
+/**
+ * 自动装箱和拆箱
+ */
+public class Demo35 {
+
+    public static void main(String[] args) {
+
+        // Integer a = new Integer(1000);
+
+        // jdk5.0 以后 自动装箱
+        Integer a = 1000;
+
+        Integer b = 2000;
+
+
+        // 自动拆箱
+        int c = new Integer(1500); // 编译器帮我们: new Integer(1500).intValue()
+
+        c = b; // b.intValue()
+
+        System.out.println(c);
+
+        Integer d1 = 1234;
+        Integer d2 = 1234;
+
+        System.out.println(d1 == d2); // false
+        System.out.println(d1.equals(d2)); // true
+
+        Integer d3 = 123; // [-128, 127] 之间的数, 仍然当作基本数据类型来处理
+        Integer d4 = 123;
+
+        System.out.println(d3 == d4); // true
+        System.out.println(d3.equals(d4)); // true
+    }
+}
+```
+
+### Date类的使用（JDK源码分析）
+```java
+import java.util.Date;
+
+/**
+ * Date类的使用（JDK源码分析）
+ */
+public class Demo36 {
+
+    public static void main(String[] args) {
+
+        Date d = new Date();
+
+        long t = System.currentTimeMillis();
+
+        System.out.println(t);
+
+
+        Date d2 = new Date(1000);
+
+        // 方法不建议使用
+        System.out.println(d2.toGMTString()); // 01秒 = 1000 毫秒
+        d2.setTime(2000);
+        System.out.println(d2.getTime());
+
+        // 比较两个时间的大小
+        System.out.println(d.getTime() < d2.getTime()); // false
+    }
+}
+```
+
+### DateFormat和SimpleDateFormat（时间和字符串的互相转换）
+```java
+import java.text.DateFormat;
+import java.text.ParseException;
+import java.text.SimpleDateFormat;
+import java.util.Date;
+
+/**
+ * DateFormat和SimpleDateFormat（时间和字符串的互相转换）
+ */
+public class Demo37 {
+
+    public static void main(String[] args) {
+
+        // 抽象类不能new, 只能new他的子类
+        DateFormat df = new SimpleDateFormat("yyyy年MM月dd日 hh时mm分ss秒, 属于本年的w周"); // 格式化字符串
+
+        // 1. 时间转字符串
+        Date d = new Date(12321323123L);
+        String str = df.format(d); // 将时间对象按照格式化字符串,转换成字符串
+        System.out.println(str);
+
+        System.out.println("========");
+
+        // 2. 字符串转时间
+        String str2 = "1977,8,8";
+        DateFormat df2 = new SimpleDateFormat("yyyy,MM,dd");
+
+        try {
+            Date d2 = df2.parse(str2);
+            System.out.println(d2);
+        } catch (ParseException e) {
+            e.printStackTrace();
+        }
+
+    }
+}
+```
+
+### Calendar和GregorianCalendar的使用（日期计算）
+```java
+import java.util.Calendar;
+import java.util.Date;
+import java.util.GregorianCalendar;
+
+/**
+ * Calendar和GregorianCalendar的使用（日期计算）
+ */
+public class Demo38 {
+
+    public static void main(String[] args) {
+        Calendar c = new GregorianCalendar();
+
+        // 1. 使用int表示时间
+        c.set(2001, 1, 10, 12, 13, 23);
+
+        // 2. 使用常量设置
+        c.set(2001, Calendar.FEBRUARY, 10, 12, 13, 23);
+
+        // 3. 单独定义
+        c.set(Calendar.YEAR, 2008);
+        c.set(Calendar.MONTH, 2);
+        c.set(Calendar.DATE, 10);
+
+        // c.setTime(new Date());
+
+        // 日期的计算
+        c.add(Calendar.YEAR, 1);
+
+        Date time = c.getTime();
+        System.out.println(time);
+
+        // 获取年份
+        System.out.println(c.get(Calendar.YEAR));
+    }
+}
+```
+
+
+
+
